[gd_scene load_steps=4 format=3 uid="uid://c8nkx2j4h37wq"]

[ext_resource type="Script" uid="uid://cdo8fujpnrubv" path="res://scripts/main_menu.gd" id="1_wk4j8"]
[ext_resource type="AudioStream" uid="uid://cheopnkr7d0kd" path="res://sfx/1 - Adventure Begin.ogg" id="2_ekxnf"]

[sub_resource type="LabelSettings" id="LabelSettings_6ck6c"]
font_size = 64
outline_size = 4
outline_color = Color(0.176471, 0.176471, 0.176471, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wk4j8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.52549, 0.262745, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GENERIC PARTY"
label_settings = SubResource("LabelSettings_6ck6c")
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Play"

[node name="MinigamesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play Minigames"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Quit"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -33.0
offset_right = 143.0
offset_bottom = -10.0
grow_vertical = 0
text = "Version 0.1"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ekxnf")
bus = &"Menu BGM"
parameters/looping = true
